<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello scc!</string>
    <string name="app_name">Sprintercup</string>
    <string name="year">2013</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loading">Loading. Please be patient.</string>
    <string name="competition_heading_text">Competition No. $i$</string>
    <string name="loading_competition">Loading Competition No. $i$</string>
    <string name="loading_lap">Loading Heat No. $i$</string>
    <string name="loading_database">Writing Database</string>
    <string name="lap_header">Heat $i$</string>
    <string name="lane">Lane $i$</string>
    <string name="menu_about">About</string>
    
    <string name="link_homepage"><![CDATA[<a href="http://atomfrede.github.com/scc/">Homepage</a>]]></string>
    <string name="link_android_annotations"><![CDATA[<a href="http://androidannotations.org/">Android Annotations</a>]]> by eBusiness Information released under Apache License 2.0</string>
	<string name="link_viewpager_indicator"><![CDATA[<a href="http://viewpagerindicator.com/">ViewPagerIndicator</a>]]> by Jake Wharton released under Apache License 2.0</string>
	<string name="link_viewpager_green_dao"><![CDATA[<a href="http://greendao-orm.com/">GreenDao ORM</a>]]> by greenrobot released under Apache License 2.0</string>
	<string name="name_year">Copyright Frederik Hahne 2012 - 2013</string>
	<string name="license">Released under GPL v3</string>
	<string name="oss">Open Source Libraries</string>
	<string name="about_header">About</string>
	<string name="about_feedback">Feeback</string>
	<string name="loading_database_competitions">Writing Competitions</string>
	<string name="loading_database_laps">Writing Laps</string>
	<string name="loading_database_participants">Writing Participants</string>
	<string name="menu_mark_as_done">Marks as done</string>
	<string name="about_app_name">SCC - The Sprintercup Companion App</string>
	
	<string name="heat_header">Heat #i of #N</string>
</resources>